test_suite/tests/ui/duplicate-attribute/rename-ser-ser.stderr
error: duplicate serde attribute `rename`
 --> tests/ui/duplicate-attribute/rename-ser-ser.rs:5:37
  |
5 |     #[serde(rename(serialize = "x", serialize = "y"))]
  |                                     ^^^^^^^^^
